--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -10,6 +10,7 @@ import Layout from '../layouts/Layout.astro'
 <Layout
   title="Born Yesterday Bakery | Contact"
   description="Contact Born Yesterday Bakery for information about our bread and pastries, order info, or to say hello. We'd love to hear from you!"
+  socialImage="/images/kouign-amann.jpeg"
 >
   <HeroBanner title="Contact Us" image={kouignAmannImage} />
   <main>
