--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ import Layout from '../layouts/Layout.astro'
 <Layout
   title="Born Yesterday Bakery"
   description="Born Yesterday Bakery is a bakery located in Maine, specializing in sourdough bread"
+  socialImage="/images/anadama.jpg"
 >
   <HeroBanner
     title="Born Yesterday Bakery"
