--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,11 +7,12 @@ import '../styles/global.css'
 interface Props {
   title: string
   description: string
+  socialImage?: string
 }
 
-const { title, description } = Astro.props
+const { title, description, socialImage } = Astro.props
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
-const socialImageURL = new URL('/sprouted-rye.png', canonicalURL)
+const socialImageURL = new URL(socialImage || '/images/sprouted-rye.png', canonicalURL)
 ---
 
 <!doctype html>
