--- a/src/pages/sourcing.astro
+++ b/src/pages/sourcing.astro
@@ -19,6 +19,7 @@ import ThemedContainer from '../components/layout/ThemedContainer.astro'
 <Layout
   title="Born Yesterday Bakery | Sourcing"
   description="Our commitment to organic, local, and sustainable sourcing."
+  socialImage="/images/focaccia.jpg"
 >
   <HeroBanner
     title="Sourcing"
@@ -348,8 +349,8 @@ import ThemedContainer from '../components/layout/ThemedContainer.astro'
 
   .column article {
     display: grid;
-    grid-template-columns: 50px 1fr;
-    grid-template-rows: 50px 1fr;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto 1fr;
     align-items: center;
     gap: 1rem;
     margin-bottom: 1rem;
