fix header font weight

--- a/src/components/layout/HeroBanner.astro
+++ b/src/components/layout/HeroBanner.astro
@@ -50,8 +50,7 @@ const { src: backgroundImageWebp } = await getImage({
     gap: 1rem;
     background-color: var(--color-secondary);
     color: var(--color-white);
-    text-shadow: clamp(0.05rem, 2vw, 0.1rem) clamp(0.05rem, 2vw, 0.1rem) 0 var(--color-black);
-    font-weight: bold;
+    text-shadow: 1px 1px 0 var(--color-black);
   }
 
   @media only screen and (max-device-width: 1366px) {
