--- a/src/pages/sourcing.astro
+++ b/src/pages/sourcing.astro
@@ -74,12 +74,12 @@ import ThemedContainer from '../components/layout/ThemedContainer.astro'
           <h3>Local Support</h3>
           <ul>
             <li>
-              <Icon name="check" />Supporting local farmers helps build our community's economy
-              instead of enriching distant corporations.
+              <Icon name="check" />Buying local food means more money goes directly to those who
+              grew it.
             </li>
             <li>
-              <Icon name="check" />Buying local means more of the money spent on food goes directly
-              to those who grew it, strengthening our community.
+              <Icon name="check" />This strengthens our community's economy instead of enriching
+              distant corporations.
             </li>
             <li>
               <Icon name="check" />Using locally-sourced ingredients ensures our products are fresh
@@ -183,7 +183,7 @@ import ThemedContainer from '../components/layout/ThemedContainer.astro'
               <p>
                 Whole grain flour includes the bran and germ, which are often removed in commercial
                 flours. This means our flour retains all the nutritious and tasty parts of the
-                grain, making our baked goods wholesome and delicious.
+                grain, making our baked goods totally awesome and delicious.
               </p>
             </article>
             <Picture src={millTwoImage} alt="Stone mill" />
