--- a/src/pages/order.astro
+++ b/src/pages/order.astro
@@ -19,7 +19,7 @@ import Layout from '../layouts/Layout.astro'
 <style>
   .site-cta {
     display: block;
-    margin: 0 auto;
+    margin: 1rem auto;
     max-width: fit-content;
   }
 </style>
