--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,10 +13,11 @@ interface Props {
 const { title, description, socialImage } = Astro.props
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
 const socialImageURL = new URL(socialImage || '/images/sprouted-rye.png', canonicalURL)
+const currentPath = Astro.url.pathname
 ---
 
 <!doctype html>
-<html lang="en" data-overlay-displayed="false">
+<html lang="en" data-overlay-displayed="false" data-current-url={currentPath}>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
