(app): upgrade deps, SEO improvements

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Layout from '../layouts/Layout.astro'
 
 <Layout
   title="Born Yesterday Bakery"
-  description="Born Yesterday Bakery is a bakery located in Maine, specializing in sourdough bread"
+  description="Born Yesterday is a small bakery in Western Maine making sourdough baked goods, with a focus on organic, local and whole grains. We see bread as a handmade product that is wildly crafted, using our hands, bodies and minds. A lot of cool 😎 fermentation goes on here and half of it is controlled by those hands and minds, but the other half is just food doing its thing. Hope you like us doing our thing and find something tasty here."
   socialImage="/images/anadama.jpg"
 >
   <HeroBanner
