--- a/src/pages/sourcing.astro
+++ b/src/pages/sourcing.astro
@@ -22,7 +22,7 @@ import ThemedContainer from '../components/layout/ThemedContainer.astro'
 
 <Layout
   title="Born Yesterday Bakery | Sourcing"
-  description="Our commitment to organic, local, and sustainable sourcing."
+  description="We source organic and local ingredients to make our sourdough bread. Learn more about our commitment to quality and sustainability."
   socialImage="/images/focaccia.jpg"
 >
   <HeroBanner
