feat(app): add promotional banner

--- a/src/components/ui/Splash.astro
+++ b/src/components/ui/Splash.astro
@@ -1,7 +1,7 @@
 ---
 import { getImage } from 'astro:assets'
 import { Icon } from 'astro-icon/components'
-import sproutedRye from '../assets/sprouted-rye.png'
+import sproutedRye from '../../assets/sprouted-rye.png'
 
 // Creating multiple image file types causes multiple network requests to load each image
 // For now, we are using WEBP only to reduce the number of requests
