--- a/src/components/ui/navigation/Navigation.astro
+++ b/src/components/ui/navigation/Navigation.astro
@@ -1,5 +1,5 @@
 ---
-import MobileLogo from '../../logo/Mobile.astro'
+import MobileLogo from '../logo/Mobile.astro'
 import Desktop from './Desktop.astro'
 import Mobile from './Mobile.astro'
 ---
