--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,9 @@
 ---
-import Splash from '../components/Splash.astro'
-import Footer from '../components/layout/Footer.astro'
-import Navigation from '../components/layout/navigation/Navigation.astro'
+import Splash from '../components/ui/Splash.astro'
+import Footer from '../components/ui/Footer.astro'
+import Navigation from '../components/ui/navigation/Navigation.astro'
 import '../styles/global.css'
+import PromotionalBanner from '../components/ui/PromotionalBanner.astro'
 
 interface Props {
   title: string
@@ -82,6 +83,7 @@ const currentPath = Astro.url.pathname
 
   <body>
     <Splash />
+    <PromotionalBanner />
     <header>
       <Navigation />
     </header>
