--- a/src/components/ui/navigation/Desktop.astro
+++ b/src/components/ui/navigation/Desktop.astro
@@ -1,5 +1,5 @@
 ---
-import DesktopLogo from '../../logo/Desktop.astro'
+import DesktopLogo from '../logo/Desktop.astro'
 ---
 
 <ul class="desktop-nav">
