--- a/src/components/ui/PromotionalBanner.astro
+++ b/src/components/ui/PromotionalBanner.astro
@@ -39,7 +39,8 @@ import { Icon } from 'astro-icon/components'
 
     @media (min-width: 768px) {
       & {
-        position: relative;
+        top: 0;
+        bottom: initial;
         border-top: 0;
         border-bottom: 2px solid var(--color-black);
 
