feat(app): numarket updates, thank you/coming soon, remove vendors

--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -27,3 +27,9 @@ const { text, class: className, isLink, href, newWindow, type } = Astro.props
     </button>
   )
 }
+
+<style>
+  .site-cta {
+    width: fit-content;
+  }
+</style>
