--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -60,6 +60,7 @@ import { Icon } from 'astro-icon/components'
     display: inline-flex;
     align-items: center;
     gap: 0.5rem;
+    text-decoration: none;
     color: var(--color-white);
     transition: var(--transition-normal);
   }
