--- a/src/components/ui/Splash.astro
+++ b/src/components/ui/Splash.astro
@@ -21,7 +21,7 @@ const { src: sproutedRyeImageWebp } = await getImage({
   <div class="scrim"></div>
   <div class="splash-content">
     <Icon name="logo" />
-    <p>Sourdough baked goods made with local, organic & ancient grains in Western Maine</p>
+    <p>Sourdough baked goods made with local, organic & ancient grains in Maine</p>
     <div class="splace-ctas">
       <button class="site-cta">Enter Site</button>
       <a href="https://bornyesterdaybakery.square.site/" class="site-cta" aria-label="Order Now"
