--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -209,6 +209,8 @@ import Layout from '../layouts/Layout.astro'
     display: flex;
     align-items: center;
     gap: 0.5rem;
+    text-decoration: none;
+    color: var(--color-grey);
     transition: var(--transition-normal);
   }
 
