--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -207,6 +207,15 @@ a {
   text-decoration: none;
 }
 
+a:not(nav a):not(.site-cta) {
+  color: var(--color-primary);
+  text-decoration: underline;
+}
+
+a:not(nav a):not(.site-cta):hover {
+  text-decoration: none;
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -227,6 +236,12 @@ section:not(:last-child) {
   margin-bottom: 6rem;
 }
 
+@media (min-width: 768px) {
+  section:not(:last-child) {
+    margin-bottom: 8rem;
+  }
+}
+
 img,
 svg {
   width: 100%;
@@ -241,6 +256,7 @@ svg {
 
 .site-cta {
   display: inline-block;
+  width: fit-content;
   padding: 0.75rem 1.5rem 0.6rem;
   color: var(--color-white);
   background-color: var(--color-primary);
