feat(app): copy update

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,9 +60,9 @@ import Layout from '../layouts/Layout.astro'
             <Icon name="number-2" />
             <h3>Coming Soon</h3>
             <p>
-              Our first-ever brick-and-mortar bakery is on the way! After growing through farmers
-              markets and pop-ups, we're so excited to bring you a permanent space filled with fresh
-              bakes, good vibes, and the same homemade love you've come to expect.
+              Our first-ever brick-and-mortar bakery in Lewiston, Maine is on the way! After growing
+              through farmers markets and pop-ups, we're so excited to bring you a permanent space
+              filled with fresh bakes, good vibes, and the same homemade love you've come to expect.
             </p>
           </article>
           <Picture src={comingSoonImage} alt="Coming Soon" />
