(feat): remove NuMarket, add BYB location (home + contact), upgrade deps

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -48,6 +48,23 @@ import Layout from '../layouts/Layout.astro'
             </a>
           </p>
         </div>
+        <div>
+          <h3>Visit Us</h3>
+          <p>
+            11 Mechanic Falls Rd
+            <br /> Oxford, ME 04270
+          </p>
+          <p>
+            <a
+              href="https://maps.app.goo.gl/uHYdqo4y3u89Zzb69"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="View Born Yesterday Bakery location on Google Map"
+              >View on Map
+              <Icon name="arrow-top-right" />
+            </a>
+          </p>
+        </div>
       </aside>
     </section>
   </main>
